[package]
name = "debugdb"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
fallible-iterator = "0.3"
gimli = "0.33"
indexmap = "2.13"
object = "0.38"
parse_int = "0.9"
rangemap = "1.7"
regex = "1.12"
rustyline = "17.0"
scroll = "0.13"
thiserror = "2.0"

[profile.release]
debug = true
